# SoftwareLabs

./: .gitignore  .ycm_extra_conf.py  Makefile  README  SoftwareLabs.workspace
.codelite/: SoftwareLabs.tags  compilation.db  compile_commands.json
Complex/: Complex.mk  Complex.txt  complex.cpp  quadratic.cpp
Lab1/: theory.txt
Lab1/Complex/: CMakeLists.txt  Complex.project  complex.cpp
Lab1/Ex2.1/: main.cpp
Lab1/screen/: scr_main.cpp  screen.cpp
Lab1/stopwatch/: StopWatch.cpp  StopWatch.h  main.cpp  stopwatch.project
Lab2/: Lab2.workspace  answers.txt
Lab2/text-query-system/: CMakeLists.txt  Line.cpp  Line.h  Paragraph.cpp  Paragraph.h  TextQueryTests.cpp  Word.cpp  Word.h  main.cpp  text-query-system.project
Revision/: Revision.project
gtest/test-code/: CMakeLists.txt  test-code.project
screen/: Screen.project  Screen.txt  scr_main.cpp  screen.cpp  screen.h
stopwatch/: StopWatch  main.cpp  stopwatch.mk  stopwatch.txt
